created new config file, made sure it was in gitignore before creating the file

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# ocnfig file with sensitve information
+# config file with sensitve information
 config.py
 
 # C extensions
